# qb-aso-training-shift-left

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: github_actions.yml
docs/src/: notebooks.ipynb
src/qb_aso_training_shift_left/: __init__.py  analytics.py  cool_functions.py  eda.py  eda_refactored.py  eda_utils.py  main.py
tests/: test_analytics.py  test_cool_functions.py  test_main.py
